# password-manager-api

./: .gitignore  Procfile  README.md  pyproject.toml
src/: config.py  database.py  dependencies.py  main.py
src/models/: refresh_token.py  service.py  user.py
src/routers/: auth.py  services.py  users.py
src/schemas/: create_service_request.py  service_credentials.py  token.py  token_refresh_request.py
src/services/: auth_service.py  refresh_tokens_service.py  services_service.py  users_service.py
tests/: conftest.py  test_services.py
